--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -1,7 +1,5 @@
 :root {
-  --watch-background: black;
-  --watch-color: #2980b9;
-}
+  --watch-background: black; --watch-color: #2980b9; }
 
 * {
   box-sizing: border-box;
@@ -31,9 +29,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-    /* overflow: hidden;
-     */
-  ;
+  /* overflow: hidden;
+   */
 }
 
 #watch {
@@ -158,25 +155,22 @@ body.flashlight #watch {
 
 #mainmenu ul li:nth-child(4) {
   background: #f1c40f;
-    /* border-bottom-left-radius: 0.1em;
-     */
-  ;
-}
+  /* border-bottom-left-radius: 0.1em;
+   */
+  ; }
 
 #mainmenu ul li:nth-child(5) {
   background: #ecf0f1;
   color: #212121;
-    /* border-bottom-right-radius: 0.1em;
-     */
-  ;
-}
+  /* border-bottom-right-radius: 0.1em;
+   */
+  ; }
 
 #mainmenu ul li:nth-child(6) {
   background: #2980b9;
-    /* border-bottom-right-radius: 0.1em;
-     */
-  ;
-}
+  /* border-bottom-right-radius: 0.1em;
+   */
+  ; }
 
 .expense {
   display: flex;
@@ -322,10 +316,7 @@ body.flashlight #watch {
   color: #fc5c65;
 }
 
-#new-person,
-#messages,
-#person-info,
-#place-booking, #faq, #create-expense, #create-budget, #place-desc, #budget-desc {
+#new-person, #messages, #person-info, #place-booking, #faq, #create-expense, #create-budget, #place-desc, #budget-desc {
   padding: 0.5em;
 }
 
@@ -417,9 +408,7 @@ body.flashlight #watch {
   margin-top: 0;
 }
 
-.input-with-icon,
-.gps-search,
-input[type="text"], input[type="number"] {
+.input-with-icon, .gps-search, input[type="text"], input[type="number"] {
   width: 100%;
   background: white;
   margin: 0.3em 0;
@@ -539,8 +528,7 @@ button:active {
   left: 0.5em;
 }
 
-#new-contact-btn,
-#new-budget-button {
+#new-contact-btn, #new-budget-button {
   width: calc(100% - 1em);
   margin: 0.5em;
 }
@@ -606,8 +594,7 @@ button:active {
   background-size: 100% 100%;
 }
 
-#gps-path,
-#gps {
+#gps-path, #gps {
   padding: 0.5em;
 }
 
@@ -618,8 +605,7 @@ button:active {
   box-shadow: 0px 0px 4px #0000006e;
 }
 
-.input-with-icon input,
-.gps-search input {
+.input-with-icon input, .gps-search input {
   padding: 0em;
   border-radius: 0em;
   margin: 0 0.5em 0 0;
@@ -749,9 +735,7 @@ button:active {
   margin-right: 0.25em;
 }
 
-.picker-cancel:hover,
-.picker-cancel:focus,
-.picker-cancel:active {
+.picker-cancel:hover, .picker-cancel:focus, .picker-cancel:active {
   background: #e74c3c;
   box-shadow: inset 0 0 17px rgba(0, 0, 0, 0.2);
 }
@@ -762,9 +746,7 @@ button:active {
   margin-left: 0.25em;
 }
 
-.picker-confirm:hover,
-.picker-confirm:focus,
-.picker-confirm:active {
+.picker-confirm:hover, .picker-confirm:focus, .picker-confirm:active {
   background: #27ae60;
   box-shadow: inset 0 0 17px rgba(0, 0, 0, 0.2);
 }
@@ -842,8 +824,7 @@ button:active {
   display: flex;
 }
 
-#messages img,
-#person-info img {
+#messages img, #person-info img {
   width: 3em;
   height: 3em;
   border-radius: 50%;
@@ -898,13 +879,20 @@ button:active {
   bottom: 0.25rem;
 }
 
-#messages .content {position: fixed;top: 1.5em;height: calc(100% - 6em);overflow: auto;}
+#messages .content {
+  position: fixed;
+  top: 1.5em;
+  height: calc(100% - 6em);
+  overflow: auto;
+  left: 0.5em;
+  width: calc(100% - 1em);
+}
 
 #messages .input-with-icon {
- position: fixed;
- width: calc(100% - 1em);
- bottom: 1.5em;
- left: 0.5em;
+  position: fixed;
+  width: calc(100% - 1em);
+  bottom: 1.5em;
+  left: 0.5em;
 }
 
 #messages img {
