feat: clean up buttons
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -859,6 +859,10 @@ button:active {
   color: rgba(255, 255, 255, 0.8);
 }
 
+#person-info > button:last-of-type {
+  margin-top: 0;
+}
+
 .input-with-icon {
   display: flex;
 }
