feat: disable send first
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -462,7 +462,7 @@ button, button:active, button:focus {
   outline: 0;
 }
 
-button.disabled {
+.disabled {
   opacity: 0.5;
   pointer-events: none;
 }
