--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -873,9 +873,14 @@ button:active {
   color: rgba(255, 255, 255, 0.8);
 }
 
-#person-info > button:last-of-type {
-  margin: 0;
+#person-info > button:nth-child(4) {
+  margin-top: 0;
 }
+
+#person-info > button:last-of-type {
+  margin-bottom: 0;
+}
+
 
 .input-with-icon {
   display: flex;
