--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -987,3 +987,65 @@ button:active {
   margin: 0 auto;
   width: calc(100% - 2em);
 }
+
+.overlay-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background: #000000c2;
+  display: none;
+}
+
+.overlay-modal.visible {
+  display: block;
+}
+
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  background: white;
+  padding: 1em;
+  box-shadow: 0 0 17px rgba(0, 0, 0, 0.2);
+  min-width: 28em;
+  display: none;
+}
+
+.modal.visible {
+  display: block;
+}
+
+.modal label,
+.modal select,
+.modal input {
+  display: block;
+  width: 100%;
+  border-radius: 0;
+}
+
+.modal input[type="submit"],
+.modal label {
+  font-weight: bold;
+  margin-top: 1em;
+}
+
+.modal label:first-of-type {
+  margin-top: 0;
+}
+
+.modal input {
+  border: 1px solid #cacaca;
+}
+
+.modal input[type="submit"] {
+  margin-top: 1em;
+  padding: 0.5em;
+  background: #cacaca;
+  cursor: pointer;
+}
