feat: add basis for simulations
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -922,6 +922,7 @@ button:active {
   overflow: auto;
   left: 0.5em;
   width: calc(100% - 1em);
+  padding-top: 0.5em;
 }
 
 #messages .input-with-icon {
