--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -989,6 +989,27 @@ button:active {
   width: calc(100% - 2em);
 }
 
+#calling img {
+  border-radius: 50%;
+  width: 4em;
+  height: 4em;
+  margin: 0 auto;
+  display: block;
+}
+
+#calling p {
+  text-align: center;
+  font-size: 1.5em;
+  margin: 0.3em 0;
+}
+
+#calling button {
+  margin: auto;
+  width: 40%;
+  display: inline;
+  margin-inline-start: 0.8em;
+}
+
 .overlay-modal {
   position: fixed;
   top: 0;
