fix: solve euros
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/css/style.css
+++ b/igo/css/style.css
@@ -541,7 +541,7 @@ button:active {
 }
 
 #budget-bar #budget-max::after, #budget-bar #budget-spent::after {
-  content: " â‚¬";
+  content: "€";
 }
 
 #budget-bar #budget-max {
